--- a/GolfFinderMVC/GolfFinderMVC.csproj
+++ b/GolfFinderMVC/GolfFinderMVC.csproj
@@ -244,8 +244,11 @@
     <Content Include="Views\Course\Delete.cshtml" />
     <Content Include="Views\Rating\Index.cshtml" />
     <Content Include="Views\Rating\Create.cshtml" />
-    <Content Include="Views\Score\Index.cshtml" />
     <Content Include="Views\Score\Create.cshtml" />
+    <Content Include="Views\Score\Index.cshtml" />
+    <Content Include="Views\Rating\Details.cshtml" />
+    <Content Include="Views\Rating\Edit.cshtml" />
+    <Content Include="Views\Rating\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
