--- a/GolfFinderMVC/GolfFinderMVC.csproj
+++ b/GolfFinderMVC/GolfFinderMVC.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Controllers\CourseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\MapController.cs" />
     <Compile Include="Controllers\RatingController.cs" />
     <Compile Include="Controllers\ScoreController.cs" />
     <Compile Include="Global.asax.cs">
@@ -249,6 +250,10 @@
     <Content Include="Views\Rating\Details.cshtml" />
     <Content Include="Views\Rating\Edit.cshtml" />
     <Content Include="Views\Rating\Delete.cshtml" />
+    <Content Include="Views\Score\Details.cshtml" />
+    <Content Include="Views\Score\Edit.cshtml" />
+    <Content Include="Views\Score\Delete.cshtml" />
+    <Content Include="Views\Map\Maps.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
