--- a/GolfFinder_Data/GolfFinder_Data.csproj
+++ b/GolfFinder_Data/GolfFinder_Data.csproj
@@ -60,6 +60,10 @@
     <Compile Include="Migrations\202105220052190_Initial.Designer.cs">
       <DependentUpon>202105220052190_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202105230122573_Added Views.cs" />
+    <Compile Include="Migrations\202105230122573_Added Views.Designer.cs">
+      <DependentUpon>202105230122573_Added Views.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RatingsData\Rating.cs" />
@@ -72,6 +76,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202105220052190_Initial.resx">
       <DependentUpon>202105220052190_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202105230122573_Added Views.resx">
+      <DependentUpon>202105230122573_Added Views.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
